AWSEKS/microServiceIngress-AWS.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-service-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: metadata-webapi-service
          servicePort: 8081
        path: /metadataapi/
      - backend:
          serviceName: policy-webapi-service
          servicePort: 8080
        path: /policyapi/
